--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -15,7 +15,7 @@
     {% for category, members in groupedMembers %}
         <div class="row mb-5">
             <h2 class="text-center my-4">
-                {% if category == 'salarié' %}
+                {% if category == 'salarie' %}
                     Salariés de ScriptZenIT
                 {% elseif category == 'ancien_stagiaire' %}
                     Anciens Stagiaires
