--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -1,6 +1,6 @@
 <div class="mb-4">
 	<header id="header" style="margin-bottom: 3rem !important;margin-top: 3px;!important">
-		<nav class="navbar navbar-expand-lg fixed-top container text-dark mt-top-logo" style="background-color: #ffffff;">
+		<nav class="navbar navbar-expand-lg fixed-top container-fluid text-dark mt-top-logo" style="background-color: #ffffff;">
 			<!-- Text Logo -->
 			<div class="logo">
 				<a href="{{ url('front_home') }}">
