--- a/templates/back/devis/index.html.twig
+++ b/templates/back/devis/index.html.twig
@@ -47,6 +47,11 @@
                     <td>{{ devis.createdAt|date('Y-m-d H:i:s') }}</td>
                     <td>{{ devis.statut }}</td>
                     <td>
+                        <div class="mt-3">
+                            <a href="{{ path('back_devis_reply', {'id': devis.id}) }}" class="btn btn-primary">
+                                Répondre au Devis
+                            </a>
+                        </div>
                         <a href="{{ path('back_devis_show', {'id': devis.id}) }}">Voir</a>
                         <a href="{{ path('back_devis_edit', {'id': devis.id}) }}">Modifier</a>
                         <form action="{{ path('back_devis_delete', {'id': devis.id}) }}" method="post" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce devis ?');">
