--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -43,7 +43,7 @@
                             {{ form_widget(form.email, {'attr': {'class': 'form-control shadow-sm', 'id': 'email'}}) }}
                             {{ form_label(form.email, null, {'attr': {'class': 'text-dark'}}) }}
                         </div>
-                        <button type="submit" id="submitButton" class="btn btn-primary btn-lg w-100 shadow-sm">
+                        <button type="submit" id="submitButton">
                             Me faire rappeler
                         </button>
                     {{ form_end(form) }}
