--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -44,7 +44,7 @@
                                     </div>
                                     <div class="ci-text">
                                         <a href="tel:0762972691" class="display-4">07 62 97 26 91</a>
-                                        <p>Vous pouvez me joindre à ce numéro pour toute demande.</p>
+                                        <p>Vous pouvez joindre ce numéro pour toute demande.</p>
                                     </div>
                                 </div>
 
@@ -64,7 +64,7 @@
                                     </div>
                                     <div class="ci-text">
                                         <a href="mailto:wbelbeche.s@gmail.com" class="display-4" style="font-size: 20px;">contact@scriptzenit.fr</a>
-                                        <p>N'hésitez pas à m'envoyer un e-mail pour toute question ou proposition de projet.</p>
+                                        <p>N'hésitez pas à nous envoyer un e-mail pour toute question ou proposition de projet.</p>
                                     </div>
                                 </div>
                             </div>
